# tambola

./: .gitignore  cargo.toml
old/tambola-frontend/: .gitignore  Cargo.toml  package-lock.json
old/tambola-frontend/src/: app.rs  lib.rs
old/tambola-frontend/src/components/: mod.rs
old/tambola-frontend/src/components/game/: mod.rs
old/tambola-frontend/src/pages/: home.rs  mod.rs  tp.rs
old/tambola-frontend/src/routes/: mod.rs
old/tambola-frontend/static/: styles.scss
tambola-backend/: Cargo.toml
tambola-backend/src/: main.rs  server.rs
tambola-backend/src/game/: hub.rs  mod.rs
tambola-backend/src/game/instance/: mod.rs  user.rs
tambola-frontend/: index.html  package.json  wasm-builder.js
tambola-frontend/app/: main.sass
tambola-frontend/crate/: Cargo.toml
tambola-frontend/crate/src/: app.rs  app_old.rs  app_trial.rs  lib.rs  router.rs
tambola-frontend/crate/src/agents/: mod.rs  store.rs  ws_api.rs
tambola-frontend/crate/src/components/: mod.rs  new_game.rs
tambola-frontend/crate/src/components/game/: host.rs  mod.rs  player.rs
tambola-frontend/crate/src/components/game/user/: host.rs  mod.rs  player.rs
tambola-frontend/crate/src/components/game/user/started/: host.rs
tambola-frontend/crate/src/pages/: about.rs  home.rs  mod.rs
tambola-frontend/crate/src/pages/tambola/: game.rs  home.rs  mod.rs
tambola-lib/: Cargo.toml
tambola-lib/src/game/: mod.rs  proto.rs
warp-backend/: Cargo.toml
yew-frontend/: Cargo.toml
