[package]
name = "tambola-backend"
version = "0.1.0"
authors = ["atmaram"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tambola-lib = { path = "../tambola-lib" }
warp = "0.2.5"
tokio = { version = "0.2.24", features = ["full"] }
futures = "0.3.8"
