[package]
name = "tambola-backend"
version = "0.1.0"
authors = ["atmaram"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tambola-lib = { path = "../tambola-lib" }
warp = "0.2.5"
tokio = { version = "0.2.24", features = ["full"] }
futures = "0.3.8"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
clap = "3.0.0-beta.2"
env_logger = "0.8.2"
toml = "0.5.7"
