[package]
name = "tambola-lib"
version = "0.1.0"
authors = ["atmaram"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7" }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
uuid = { version = "0.8.1", features = ["serde", "v4","wasm-bindgen"] }
