[package]
authors = ["Francisco Jesus Navarro Cortes"]
categories = ["wasm"]
description = "My awesome Yew with Yew-Router and Parcel application!"
license = "MIT"
name = "tambola-frontend"
readme = "./README.md"
repository = "https://github.com/spielrs/yew-parcel-template.git"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"

[dependencies]
cfg-if = "0.1"
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
dotenv = "0.15"
failure = "0.1"
yew = { version="0.17.4", features = ["toml", "yaml", "msgpack", "cbor", "web_sys"]}
yew-router = { version = "0.14", features = ["web_sys"]}
web-sys = { version="0.3", features =["MouseEvent"]}
yew_styles = { version="0.8.1", features = ["layouts","button"]}
yewtil = "0.3.2"
anyhow = "1.0.35"
tambola-lib = { path = "../../tambola-lib" }
uuid = { version = "0.8.1", features = ["serde", "v4","wasm-bindgen"] }